<resources>
    <string name="app_name">Habits Tracker</string>

    <string name="app_bar_name_screen_list_habits">Список привычек</string>
    <string name="app_bar_name_screen_new_habit_add">Создание привычки</string>
    <string name="app_bar_name_screen_habit_update">Редактирование привычки</string>

    <string name="button_save_habit">Сохранить</string>

    <string name="type_positive">Тип: позитивная</string>
    <string name="type_negative">Тип: негативная</string>

    <string name="type_positive_for_radio_button">Позитивная</string>
    <string name="type_negative_for_radio_button">Негативная</string>

    <string name="priority_low">Приоритет: низкий</string>
    <string name="priority_middle">Приоритет: средний</string>
    <string name="priority_high">Приоритет: высокий</string>

    <string name="priority_low_for_spinner">Низкий</string>
    <string name="priority_middle_for_spinner">Средний</string>
    <string name="priority_high_for_spinner">Высокий</string>

    <string name="need_count">Количество выполнений</string>
    <string name="count_ready">Выполнено</string>
    <string name="period_input">Период</string>

    <string name="period_day">День</string>
    <string name="period_week">Неделя</string>
    <string name="period_mouth">Месяц</string>
    <string name="period_year">Год</string>

    <string name="period_day_spinner_title">Период: День</string>
    <string name="period_week_spinner_title">Период: Неделя</string>
    <string name="period_mouth_spinner_title">Период: Месяц</string>
    <string name="period_year_spinner_title">Период: Год</string>

    <string name="priority_title">Приоритет:</string>

    <string name="count_ready_habit">Выполнено: %1$s из %2$s</string>

    <string name="title_habit">Название привычки</string>
    <string name="description_habit">Описание привычки</string>
    <string name="color_background_habit">Цвет</string>

    <string name="color_picker_default_color">По умолчанию</string>
    <string name="color_picker_save">Сохранить</string>

    <string name="dropdown_habit_description">Получить дополнительную информацию о привычке</string>
    <string name="create_habit">Создать привычку</string>

    <string name="period_title">Период: %1$s</string>

    <string name="rgb_template">RGB(%1$s)</string>
    <string name="hsv_template">HSV(%1$s)</string>

    <string name="error_message_input_habit_data">Заполните обязательные поля</string>
    <string name="error_message_ok">OK</string>

    <string name="ready">Выполнил</string>

    <string name="page_positive">Положительные</string>
    <string name="page_negative">Негативные</string>

    <string name="home_screen">Домашний экран</string>
    <string name="application_info">О приложении</string>
    <string name="title_drawer">Меню</string>

    <string name="application_info_title">О приложении</string>
    <string name="phone_number">8\-919\-594\-50\-29</string>
    <string name="phone_number_desc">Phone number</string>
    <string name="share">\@Masharo</string>
    <string name="share_desc">Share</string>
    <string name="mail">naronwaz0\@gmail.com</string>
    <string name="mail_desc">Mail</string>

    <string name="column_id_selected">Сортировка по: дате создания</string>
    <string name="column_count_selected">Сортировка по: количеству</string>
    <string name="column_priority_selected">Сортировка по: приоритету</string>

    <string name="column_id_variant">Дата создания</string>
    <string name="column_count_variant">Количество</string>
    <string name="column_priority_variant">Приоритет</string>

    <string name="type_sort_asc_selected">Направление: по возрастанию</string>
    <string name="type_sort_desc_selected">Направление: по убыванию</string>

    <string name="type_sort_asc_variant">По возрастанию</string>
    <string name="type_sort_desc_variant">По убыванию</string>

    <string name="search_title">Поиск</string>

    <string name="description_avatar">Картинка с интернета</string>

    <string name="name_application_info">Nikita Tokarev</string>
    <string name="body_application_info">¯\\_(ツ)_/¯</string>
    <string name="application_description">Трекер привычек - это таблица-календарь или приложение, в которых вы фиксируете цель, а потом отмечаете, с какой регулярностью над ней работали. Такие приложения помогают формировать полезные привычки и следить за их выполнением.</string>

    <string name="bad_message_less">Можете выполнить еще %1$s раз</string>
    <string name="bad_message_more">Хватит это делать</string>
    <string name="good_message_less">Стоит выполнить еще %1$s раз</string>
    <string name="good_message_more">You are breathtaking!</string>
</resources>